# upscale

./: .gitignore  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
tools/: export-medium-classify.py  setup.ps1  setup.sh  smoke-test.sh
ui/: Cargo.toml  build.ps1
ui/src/: app.rs  drop.rs  icons.rs  main.rs  models.rs  onnx.rs  paths.rs  preview.rs  suggest.rs  theme.rs  worker.rs
