[package]
name = "upscale-ui"
version = "0.1.2"
edition = "2021"
description = "Loku — minimal desktop image upscaler"
homepage = "https://github.com/lasaths/upscale"
repository = "https://github.com/lasaths/upscale"
license = "MIT"
readme = "../README.md"

[[bin]]
name = "loku"
path = "src/main.rs"

[package.metadata.dist]
formula = "loku"

[dependencies]
eframe = "0.29"
image = "0.25"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-rustls"] }
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-rustls", "coreml"] }

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-rustls", "directml"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true

[profile.dist]
inherits = "release"
lto = "thin"
